KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <referenceTo>Antra_Employee__c</referenceTo>
    <relationshipLabel>Antra Employee Leaves</relationshipLabel>
    <relationshipName>Antra_Employee_Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>