KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/leave_duration__c.field-meta.xml
<CustomField>
    <fullName>leave_duration__c</fullName>
    <formula>IF( Leave_start_date__c = Leave_End_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start day&apos;) || ISPICKVAL( Partial_Days__c , &apos;End day&apos;)),0.5,
IF( Leave_start_date__c = Leave_End_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start &amp; End day&apos;)),1,
IF(Leave_End_date__c &gt; Leave_start_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start day&apos;) || ISPICKVAL( Partial_Days__c , &apos;End day&apos;)) , (Leave_End_date__c -Leave_start_date__c )+0.5, (Leave_End_date__c -Leave_start_date__c )+1 )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>leave duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>