KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Leave_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
            <value>
                <fullName>Medically Unfit</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Personal Reason</fullName>
            </value>
            <value>
                <fullName>Relative / Friend marriage</fullName>
            </value>
            <value>
                <fullName>Ritual</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>