KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/Leave_start_date__c.field-meta.xml
<CustomField>
    <fullName>Leave_start_date__c</fullName>
    <label>Leave start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>