KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>casual leave</fullName>
            </value>
            <value>
                <fullName>earned leave</fullName>
            </value>
            <value>
                <fullName>maternity leave</fullName>
            </value>
            <value>
                <fullName>medical leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>