KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/fields/Partial_Days__c.field-meta.xml
<CustomField>
    <fullName>Partial_Days__c</fullName>
    <label>Partial Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Start day</fullName>
            </value>
            <value>
                <fullName>End day</fullName>
            </value>
            <value>
                <fullName>start day &amp; End day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>