KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee_Leaves__c/validationRules/Casual_leave_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Casual_leave_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Leave_Type__c , &apos;casual leave&apos;) &amp;&amp;  leave_duration__c &gt;3</errorConditionFormula>
    <errorMessage>unable to process casual leave because the leave applied is more than 3 days</errorMessage>
</ValidationRule>